# a-simple-todo-list-cpp

./: CMakeLists.txt  main.cpp
src/: Task.cpp  Task.hpp  TodoList.cpp  TodoList.hpp
tests/: todo_test.cpp
